--- a/wwwroot/css/Navbar/extended_panel.css
+++ b/wwwroot/css/Navbar/extended_panel.css
@@ -38,12 +38,14 @@
     font-size: 2.7vh;
     font-weight: 500;
 }
+.search_input_container{
+    width:100%;
+}
 .search_input {
-    margin: 10px 15px;
-    width: 80%;
+    margin: 10px 12px;
+    width: 93%;
     height: 40px;
     padding: 0 10px;
-
     border: 1px solid var(--Color2);
     background-color: var(--Color4);
     border-radius: 10px;
